# stx-ai4se

./: CLAUDE.md  book.py  pyproject.toml  render.yaml
.claude/commands/designer/: presentation-audit.md  presentation-fix.md  survey-convert.md
.claude/commands/stx-presentation/: presentation-audit.md  presentation-fix.md  survey-convert.md
.claude/designer/presentation/agents/: presentation-designer.md
.claude/designer/presentation/skills/: fullscreen-presentation-rules.md  presentation-design-rules.md  survey-chart-conversion.md
.claude/designer/ros_designer_default/agents/: presentation-designer.md
.claude/designer/ros_designer_default/skills/: presentation-design-rules.md  survey-chart-conversion.md
.streamlit/: config.toml
.stx_cache/: page_cache.json
blocks/: bck_survey_ai_tools.py  bck_survey_dev_ides.py  bck_title.py
custom/: styles.py  themes.py
